<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigattion_drawer_open">Open navigation drawer</string>
    <string name="navigattion_drawer_close">Close navigation drawer</string>

    <string name="app_name">InsudiBeta</string>

    <string name="textTerms">"This application is in the testing phase and we do not take responsibility "
                     "for its improper functioning and for decisions taken because of the information contained in the application."
                    "Using it does not replace a medical appointment or contact with a pharmacist.
        Information obtained with the help of the application can not be the basis for changes to previously recommended diagnosis or treatment."</string>
    <string name="agree">Understand</string>
    <string name="titleTrems">Terms</string>
    <string name="diaryAdd">Add</string>

    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="calculatorLastTakenInsulin">Last insulin taken: </string>
    <string name="adapterDose">dose</string>
    <string name="time1">time</string>


    <string name="calculatorMenu">Calculator</string>
    <string name="userMenu">User</string>
    <string name="diaryMenu">Diary</string>
    <string name="authorsMenu">Authors</string>
    <string name="settingsMenu">Settings</string>

    <string name="calculatorLastTaken">Last insulin take: </string>
    <string name="calculatorCarboInMeal">Carbohydrates in meal - WW</string>
    <string name="calculatorActualGlik">Blood sugar level (mg/dl)</string>
    <string name="calculatorMoreOptions">More options</string>
    <string name="calculatorCalcul">Count</string>

    <string name="userTypeOfInsulin">The type of insulin</string>
    <string name="userFirstPartName">Carbohydrate conversion</string>
    <string name="userFirstPartFill">Page 1/3 is filled good</string>
    <string name="userSecondPartName">Sensitivity factor (mg/dl)</string>
    <string name="userSecondPartFill">Page 2/3 is filled good</string>
    <string name="userThirdPartName">The Target blood sugar level</string>
    <string name="userThirdPartFill">Everything you added correct</string>
    <string name="userNext">Next</string>
    <string name="userReject">Reject</string>
    <string name="userFill">Fill all fields</string>

    <string name="eCalculatorWbt">WBT</string>
    <string name="eCalculatorPhysicalActivity">Physical Activity</string>
    <string name="eCalculatorIG">IG</string>
    <string name="eCalculatorAdd">Add</string>
    <string name="eCalculatorCancel">Cancel</string>
    <string name="eCalculatorFinishText">Adding ...</string>


    <string name="authorContact">Contact with us: </string>
    <string name="authorText">Authors</string>
    <string name="hint_entry_insulinedosage">Insuline dosage...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Insuline dosage not saved because it is empty.</string>
    <string name="title_activity_diary">Diary</string>


    <string-array name="activity_spinner_array">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

    <string-array name="wbt_ig">
        <item>WBT</item>
        <item>IG</item>
    </string-array>

    <string-array name="fake_spinner_text">
        <item>Apidra</item>
        <item>NovoRapid</item>
        <item>Humalog</item>
        <item>Liprolog</item>
    </string-array>


    <string-array name="not_all_data_calculator">
        <item>Error</item>
        <item>Please put in all the data</item>
    </string-array>

    <string-array name="alert_dialog_calculator">
        <item>Please take</item>
        <item> insulin units</item>
        <item>Take</item>
        <item>Dismiss</item>
        <item>Result</item>
    </string-array>

    <string-array name="text_user_first">
        <item>Carbohydrate conversion</item>
        <item>The type of insulin</item>
        <item>Next</item>
        <item>Reject</item>
        <item>Page 1/3 is filled good</item>
    </string-array>

    <string-array name="text_user_second">
        <item>Sensitivity factor (mg/dl)</item>
        <item>The type of insulin</item>
        <item>Next</item>
        <item>Correct 1/3</item>
        <item>Page 2/3 is filled good</item>
    </string-array>

    <string-array name="text_user_third">
        <item>The Target blood sugar level</item>
        <item>The type of insulin</item>
        <item>Add</item>
        <item>Correct 2/3</item>
        <item>Everything you added correct</item>
    </string-array>o





</resources>
